microservices/zigbee2mqtt/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: "home-assistant"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.28.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
            - name: zigbee2mqtt-config
              mountPath: /app/configuration.yaml
              subPath: configuration.yaml
            - name: zigbee2mqtt-udev
              mountPath: /run/udev
            - name: zigbee-dongle
              mountPath: /dev/ttyACM0
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 30
            timeoutSeconds: 2
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            failureThreshold: 5
            timeoutSeconds: 2
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 10
            timeoutSeconds: 5
            periodSeconds: 20
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: zigbee-dongle
          hostPath:
            path: /dev/ttyACM0
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
