microservices/zigbee2mqtt/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: "home-assistant"
spec:
  type: NodePort
  selector:
    app: zigbee2mqtt
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
      nodePort: 30223
